fix team text width on small screens

--- a/source/_sass/_index.scss
+++ b/source/_sass/_index.scss
@@ -328,6 +328,7 @@
     margin-left: 20px;
     margin-top: 18px;
     color: darken($main-color,8);
+    max-width: 60%;
 }
 .team-portrait {
     float: left;
